deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name : myapp-deployment
  labels:
    app: my-app
spec:
 selector:
   matchLabels:
     app: my-app
    
 template:
   metadata:
     labels:
       app: my-app
   spec:
     containers:
     - name: app
       image: kirtigupta123456/my-app:9
       ports:
       - containerPort: 80
