pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name : myapp-pod
  labels:
    app: my-app
    tier: front-end
spec:
  containers:
   - name: my-app
     image: my-app
