service.yaml
apiVersion: v1
kind: Service
metadata:
  name : myapp-service
spec:
 type: NodePort
 selector:
    app: my-app
 ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    nodePort: 30001
