service.yml
apiVersion: v1
kind: Service
metadata:
  name : myapp-service
spec:
 type: NodePort
 ports:
  -targetPort: 80
   port:80
   nodeport: 5000
 selector:
    app: my-app
    type: front-end
